[package]
name = "ic_sdk"
version = "1.56.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
ic-types = { git = "https://github.com/dfinity/ic"}
ic-base-types = { git = "https://github.com/dfinity/ic"}
ledger-canister = { git = "https://github.com/dfinity/ic"}
base32 = "0.4.0"
num-bigint = "0.4.3"
ic-agent = "0.7.0"
candid = "0.7.4"
garcon = "0.2.3"
actix-web = "4.0.0-beta.8"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
mysql = "*"
openssl = { version = "0.10.38", features = ["vendored"] }
log = "0.4.14"
tokio = { version = "1.0", features = ["full"] }
simple_logger = "1.15.1"
serde_json = "1.0"
async-std = {version = "1", feature = ["attributes","tokio1"]}
actix-rt = "*"
json = "*"
rocket = {version = "0.5.0-rc.1", features = ["secrets", "tls", "json"]}